Implement login and registration system with UI updates
- Changed startup URI in App.xaml to LoginWindow.
- Added Material Design resources for enhanced UI.
- Updated BudgetManager.csproj to include new packages and icons.
- Made Password property public in User model.
- Removed ListBox from MainWindow.xaml and updated its code-behind.
- Created UsersController to manage user data.
- Added LoginWindow and RegisterWindow with respective logic.
- Implemented MessageWindow for user notifications.

--- a/BudgetManager/BudgetManager.csproj
+++ b/BudgetManager/BudgetManager.csproj
@@ -8,4 +8,21 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Assets\Icons\LoginIcon.ico" />
+    <None Remove="Assets\Icons\MessageBoxIcon.ico" />
+    <None Remove="Assets\Icons\RegisterIcon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\Icons\LoginIcon.ico" />
+    <Resource Include="Assets\Icons\MessageBoxIcon.ico" />
+    <Resource Include="Assets\Icons\RegisterIcon.ico" />
+  </ItemGroup>
+
 </Project>
